--- a/lib/Chess/Position.pod
+++ b/lib/Chess/Position.pod
@@ -36,6 +36,10 @@ coordinate notation
 
 =item FEN (Forsyth-Edwards Notation) import and export
 
+=item Static Exchange Evaluation (SEE)
+
+=item Zobrist Keys
+
 =back
 
 For a gentler introduction, please see L<Chess::Position::Tutorial>.  The rest
@@ -192,6 +196,20 @@ Only the lower 16 bits of the move are set, that means the start and destination
 square, a possible promotion piece and the en passant flag in case the move
 is an en passant capture.
 
+=item B<pseudoLegalAttacks>
+
+Like </pseudoLegalMoves> but only returns "interesting" moves.  Interesting
+moves are captures, promotions, and moves directly giving check.  Discovered
+checks are not generated.  This has performance reasons.
+
+You will want to call this method for generating moves in a quiescence search.
+Since quiescence search is imperfect anyway, it is assumed that ignoring
+discovered checks does not have a negative impact.
+
+Future versions of this library may include discovered checks.
+
+=back
+
 =item B<equals(POSITION)>
 
 Returns true if the current position is equivalent to B<POSITION>.
@@ -284,6 +302,33 @@ the fact that they are necessarily the first king move.
 
 The half-move-clock is important because both players can claim a draw, when
 the half-move clock has reached 50.
+
+=item B<signature>
+
+Returns a 64-bit Zobrist key (aka 64-bit integer) that identifies the position.
+Properties taken into account are:
+
+=over 4
+
+=item B<piece positions>
+
+=item B<color to move>
+
+=item B<castling rights>
+
+=item B<en-passant status>
+
+=back
+
+Note that hash collisions albeit unlikely, may occur because 64 bit are, of
+course, not sufficient to uniquely identify a chess position.
+
+The signature computed for a certain position is guaranteed not to change for
+one release of B<Chess::Position>.  In order to compute different signatures,
+you have to override either the pseudo-random number generator L</RNG> or its
+seed L</CP_RANDOM_SEED>.  If you turn the constant L</CP_RANDOM_SEED> into
+a non-constant subroutine, you can also get different signatures, whenever
+you re-load the library.
 
 =item B<inCheck>
 
@@ -419,28 +464,64 @@ possible promotion piece, for example "e2e4" or "f2f1q".
 Renders the integer B<MOVE> into Standard-Algebraic Notation SAN, for example
 "e4", "Bxc4", "O-O", or "fxe1=Q".
 
-=item B<coordinateNotation(MOVE)>
+=item B<moveCoordinateNotation(MOVE)>
 
 Renders the integer B<MOVE> into coordinate notation, for example "e2e4" or
 "f2f1q".
+
+=item B<LAN(MOVE)>
+
+Returns the Long Algebraic Notation LAN of the move.  This is an alias for
+L</moveCoordinateNotation>.
+
+=item B<moveEquivalent(MOVE1, MOVE2)>
+
+Returns true if the significant parts of B<MOVE1> and B<MOVE2> are equivalent.
+This is the case, when the start and destination square, and a possible
+promotion piece are equal.
+
+Although, this is technically a class method you should keep in mind that 
+the redundant parts of the moves depend on the current position.
 
 =item B<moveFrom(MOVE)>
 
 Extracts the shift (0-63) of the starting square.
 
+=item B<setMoveFrom(MOVE, FROM)>
+
+Sets the shift (0-63) of the starting square in B<MOVE> to B<FROM> and returns
+the move.
+
 =item B<moveTo(MOVE)>
 
 Extracts the shift (0-63) of the destination square.
+
+=item B<setMoveFrom(MOVE, TO)>
+
+Sets the shift (0-63) of the destination square in B<MOVE> to B<TO> and returns
+the move.
 
 =item B<movePromote(MOVE)>
 
 Extracts the piece that a pawn is promoted to if the move is a promotion.
 Returns either L</CP_QUEEN>, L</CP_ROOK>, L</CP_BISHOP>, or L</CP_KNIGHT>.
 
+=item B<setMovePromote(MOVE, PROMOTE)>
+
+Sets the piece to promote to in B<MOVE> to B<PROMOTE> and returns
+the move.  The piece should be one of L</CP_QUEEN>, L</CP_ROOK>, L</CP_BISHOP>,
+or L</CP_KNIGHT>.
+
 =item B<movePiece(MOVE)>
 
 Extracts the piece that does the move.  Returns one of L</CP_KING>,
 L</CP_QUEEN>, L</CP_ROOK>, L</CP_BISHOP>, L</CP_KNIGHT>, or L</CP_PAWN>.
+
+=item B<setMovePiece(MOVE, PIECE)>
+
+Sets the piece that moves in B<MOVE> to B<PIECE> and returns
+the move.  The piece should be one of L</CP_KING>, L</CP_QUEEN>, L</CP_ROOK>,
+L</CP_BISHOP>, L</CP_KNIGHT>, or L</CP_PAWN>.
 
 =item B<moveLegal(MOVE|NOTATION)>
 
@@ -484,6 +565,33 @@ If B<STATE> is state information returned by L</doMove>, takes back the
 move that was given as an argument to L</doMove>.
 
 This method is fast and is the one that should be used by engines.
+
+=item B<SEE(MOVE)>
+
+Does a static exchange evaluation SEE for move B<MOVE>.  B<MOVE> B<must> be
+a capture, a promotion, a move giving check, or any combination of it.  It
+returns the raw material balance expected from the move.
+
+The routine assumes, that after B<MOVE> had been made, all moves that re-capture
+on the target field of B<MOVE> will be executed, starting with the least
+valuable attacker of each side proceeding to the most valuable attacker.  As
+soon as a re-capture becomes disadvantageous, the sequence stops, and the
+balance up to that point is returned.
+
+Disadvantageous means that advancing to the "next round" would make the result
+worse.  For example a bishop would not normally capture a pawn that is
+protected.
+
+If you assign different values to bishops and knights by overriding
+L</CP_KNIGHT_VALUE> and L</CP_BISHOP_VALUE> you may receive small values by
+this routine, if the exchange of bishops and knights is involved.  Depending
+on your preferences you may ignore absolute values under a certain threshold,
+for example 100 centipawns.
+
+It should also be noted that the routine assumes that the values of pieces
+follows this relation:
+
+pawn E<lt> knight E<lt>= bishop E<lt> rook E<lt> queen (E<lt> king)
 
 =back
 
@@ -615,7 +723,7 @@ victim of a capture and is a valid target square.
 See L<Chess::Position::Tutorial/Understanding C<rMagic> and C<bMagic>> for
 more information.
 
-=item B<rMagic(SHIFT, OCCUPANCY)>
+=item B<bMagic(SHIFT, OCCUPANCY)>
 
 Returns a bitboard of all squares that a bishop can reach from B<SHIFT>.
 B<OCCUPANCY> is a bitboard of all squares that are occupied by pieces.
@@ -744,6 +852,25 @@ L</info>.
 
 Takes an array of moves (as integers) and converts it into an array of moves
 in coordinate notation.
+
+=back
+
+=head2 Other Methods
+
+=over 4
+
+=item B<RNG>
+
+Returns a pseudo-random integer created by the well-knows xor-shift
+pseudo-random number generator.
+
+The random-number generator is always seeded with the same seed (initial value).
+This is on purpose, so that the numbers returned are deterministic.  The
+method is currently only used for generating the Zobrist keys for position
+signatures.
+
+If you want a different seed, you should override the constant
+L</CP_RANDOM_SEED>.
 
 =back
 
